# range-tree

./: .gitignore  .travis.yml  README.md  bench-build.sh  bench-find.sh  bench.sh  range-tree.cabal  stack.yaml
bench/: Main.hs  bench-build.sh  bench-find.sh  results-build.html  results-find.html
src/Data/Range/: Tree.hs
src/Data/Range/Tree/: Class.hs  Data.hs  Raw.hs  Smart.hs  Wrappers.hs
test/Test/: Commons.hs  GeneralSpec.hs
